# claw-pipewire

./: .gitmodules  README.md  claw-pipewire-bindings.asd  claw-pipewire.asd
bindings/: x86_64-pc-linux-gnu.lisp
src/: claw.lisp
src/include/: wrapped_pipewire.h
src/include/x86_64-pc-linux-gnu/pipewire/: version.h
src/lib/: CMakeLists.txt  adapter.x86_64-pc-linux-gnu.c
